--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "sweetalert2": "^11.4.14",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "uikit": "^3.14.1"
   },
   "devDependencies": {
     "eslint": "8.15.0",
